--- a/chatgpt-clone/public/index.html
+++ b/chatgpt-clone/public/index.html
@@ -8,8 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
    
     <title>ChatGpt</title>
+    <link href=" <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+"> 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
